--- a/client/bower.json
+++ b/client/bower.json
@@ -18,7 +18,8 @@
     "angular-local-storage": "0.1.5",
     "angular-utf8-base64": "0.0.5",
     "angular-jwt": "0.0.7",
-    "angular-bootstrap": "0.13.0"
+    "angular-bootstrap": "0.13.0",
+    "angular-aria": "1.3.7"
   },
   "devDependencies": {
     "angular-mocks": "1.3.7"
