Delete the config folder and update the .gitignore file to ignores this
#7057 - Create manage providers UI that interfaces with Patient Consent Management API

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ client/vendor
 # Built application, report and coverage
 client/target
 
+# Generated configuration module
+client/app/config
+
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 client/node_modules
