--- a/client/bower.json
+++ b/client/bower.json
@@ -19,7 +19,8 @@
     "angular-utf8-base64": "0.0.5",
     "angular-jwt": "0.0.7",
     "angular-bootstrap": "0.13.0",
-    "angular-aria": "1.3.7"
+    "angular-aria": "1.3.7",
+    "angular-ui-router": "0.2.15"
   },
   "devDependencies": {
     "angular-mocks": "1.3.7"
