Add *.less, *.bmp, & *.exe to .gitattributes file

--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,7 @@
 *.tagx text
 *.sql text
 *.scss text
+*.less text
 *.opt text
 *.md text
 
@@ -28,6 +29,7 @@
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
+*.bmp binary
 *.SVG binary
 *.gif binary
 *.pdf binary
@@ -39,4 +41,5 @@
 *.ico binary
 *.MYD binary
 *.MYI binary
+*.exe binary
 *.frm binary
