--- a/client/bower.json
+++ b/client/bower.json
@@ -20,7 +20,8 @@
     "angular-jwt": "0.0.7",
     "angular-bootstrap": "0.13.0",
     "angular-aria": "1.3.7",
-    "angular-ui-router": "0.2.15"
+    "angular-ui-router": "0.2.15",
+    "checklist-model":"0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.7"
