Add *.cmd to .gitattributes file

--- a/.gitattributes
+++ b/.gitattributes
@@ -28,6 +28,7 @@
 *.md text
 *.ini text
 *.prefs text
+*.cmd text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln text eol=crlf
