Make the node version number generic in the package.json. Started working on the bug in the medical information section of the create consent page. Change the value of the save button in the create consent page.
#7178 - Implement create consent UI

--- a/client/package.json
+++ b/client/package.json
@@ -60,8 +60,8 @@
         "load-grunt-tasks": "0.3.x",
         "time-grunt": "0.2.x",
         "grunt-bump": "0.6.x",
-        "grunt-contrib-cssmin": "0.12.2",
-        "grunt-ng-constant": "1.1.0",
+        "grunt-contrib-cssmin": "0.12.x",
+        "grunt-ng-constant": "1.1.x",
         "grunt-war": "0.4.x"
     },
     "engines": {
