Add node dependency for grunt-cli in package.json
#7346: User (patient) can login to the patient portal to access the PHR API

--- a/client/package.json
+++ b/client/package.json
@@ -62,7 +62,8 @@
         "grunt-bump": "0.6.x",
         "grunt-contrib-cssmin": "0.12.x",
         "grunt-ng-constant": "1.1.x",
-        "grunt-war": "0.4.x"
+        "grunt-war": "0.4.x",
+        "grunt-cli": "0.1.x"
     },
     "engines": {
         "node": ">= 0.8.4"
