--- a/server/pom.xml
+++ b/server/pom.xml
@@ -22,12 +22,25 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>gov.samhsa.bhits.ppui.PPUIApplication</start-class>
+        <skip.grunt.build>false</skip.grunt.build>
         <java.version>1.8</java.version>
         <node.version>0.12.3</node.version>
         <npm.version>1.4.9</npm.version>
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
         <maven-war-plugin.version>2.6</maven-war-plugin.version>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>skipGrunt</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <skip.grunt.build>true</skip.grunt.build>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
@@ -59,6 +72,7 @@
 
                 <!-- optional -->
                 <configuration>
+                    <skip>${skip.grunt.build}</skip>
                     <workingDirectory>${basedir}/../client/</workingDirectory>
                 </configuration>
 
@@ -119,7 +133,6 @@
                             <srcdir>${basedir}/../client</srcdir>
                         </configuration>
                     </execution>
-
                 </executions>
             </plugin>
             <plugin>
