--- a/.gitattributes
+++ b/.gitattributes
@@ -39,9 +39,11 @@
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
+*.jpeg binary
 *.svg binary
 *.gif binary
 *.bmp binary
+*.tiff binary
 *.pdf binary
 *.ppt binary
 *.pptx binary
