--- a/client/bower.json
+++ b/client/bower.json
@@ -13,7 +13,7 @@
   ],
   "dependencies": {
     "angular-resource": "1.3.7",
-    "angular-sanitize":  "1.3.7",
+    "angular-sanitize": "1.3.7",
     "angular-loading-bar": "0.7.1",
     "angular-local-storage": "0.1.5",
     "angular-utf8-base64": "0.0.5",
@@ -21,9 +21,13 @@
     "angular-bootstrap": "0.13.0",
     "angular-aria": "1.3.7",
     "angular-ui-router": "0.2.15",
-    "checklist-model":"0.6.0"
+    "checklist-model": "0.6.0",
+    "oauth-ng": "0.4.2"
   },
   "devDependencies": {
     "angular-mocks": "1.3.7"
+  },
+  "resolutions": {
+    "angular": "~1.3.12"
   }
 }
