--- a/server/pom.xml
+++ b/server/pom.xml
@@ -19,6 +19,9 @@
         <!-- lookup parent from repository -->
     </parent>
 
+    <!-- Full Build: mvn clean install -->
+    <!-- Full Build & Run: mvn spring-boot:run -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/ (remove backslashes) -->
+    <!-- Package & Run: mvn spring-boot:run -PskipGrunt -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/ (remove backslashes) -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>gov.samhsa.bhits.ppui.PPUIApplication</start-class>
