--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>gov.samhsa.bhits.ppui</groupId>
     <artifactId>ppui</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>ppui</name>
@@ -20,8 +20,8 @@
     </parent>
 
     <!-- Full Build: mvn clean install -->
-    <!-- Full Build & Run: mvn spring-boot:run -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/ (remove backslashes) -->
-    <!-- Package & Run: mvn spring-boot:run -PskipGrunt -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/ (remove backslashes) -->
+    <!-- Full Build & Run: mvn spring-boot:run -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/pp-ui (remove backslashes) -->
+    <!-- Package & Run: mvn spring-boot:run -PskipGrunt -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/pp-ui (remove backslashes) -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>gov.samhsa.bhits.ppui.PPUIApplication</start-class>
