--- a/server/pom.xml
+++ b/server/pom.xml
@@ -31,6 +31,7 @@
         <npm.version>1.4.9</npm.version>
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
         <maven-war-plugin.version>2.6</maven-war-plugin.version>
+		<frontend-maven-plugin.version>0.0.26</frontend-maven-plugin.version>
     </properties>
 
     <ciManagement>
@@ -126,6 +127,7 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
+				<version>${frontend-maven-plugin.version}</version>
 
                 <!-- optional -->
                 <configuration>
