Include grunt-angular-file-loader which ensures that all the modules are being loaded before their references. Apply one angularjs component per file in the consent module.   \n#7178 - Implement create consent UI

--- a/client/package.json
+++ b/client/package.json
@@ -63,7 +63,8 @@
         "grunt-ng-constant": "1.1.x",
         "grunt-war": "0.4.x",
         "grunt-cli": "0.1.x",
-        "grunt-ng-annotate": "1.0.1"
+        "grunt-ng-annotate": "1.0.1",
+        "grunt-angular-file-loader": "1.1.5"
     },
     "engines": {
         "node": ">= 0.8.4"
