--- a/client/bower.json
+++ b/client/bower.json
@@ -12,22 +12,23 @@
     "tests"
   ],
   "dependencies": {
-    "angular-resource": "1.3.7",
-    "angular-sanitize": "1.3.7",
+    "angular": "1.4.8",
+    "angular-resource": "1.4.8",
+    "angular-sanitize": "1.4.8",
+    "angular-aria": "1.4.8",
     "angular-loading-bar": "0.7.1",
     "angular-local-storage": "0.1.5",
     "angular-utf8-base64": "0.0.5",
     "angular-jwt": "0.0.7",
-    "angular-bootstrap": "0.13.0",
-    "angular-aria": "1.3.7",
-    "angular-ui-router": "0.2.15",
-    "checklist-model": "0.6.0",
+    "angular-bootstrap": "0.14.x",
+    "angular-ui-router": "0.2.x",
+    "checklist-model": "0.6.x",
     "oauth-ng": "0.4.2"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.7"
+    "angular-mocks": "1.4.8"
   },
   "resolutions": {
-    "angular": "~1.3.12"
+    "angular": "~1.4.8"
   }
 }
