--- a/client/bower.json
+++ b/client/bower.json
@@ -16,7 +16,7 @@
     "angular-resource": "1.4.8",
     "angular-sanitize": "1.4.8",
     "angular-aria": "1.4.8",
-    "angular-loading-bar": "0.7.1",
+    "angular-loading-bar": "0.8.x",
     "angular-local-storage": "0.1.5",
     "angular-utf8-base64": "0.0.5",
     "angular-jwt": "0.0.7",
