Update checklist-model and oauth-ng modules
#7698 - As a developer, I want to update Angular to version 1.4, so that the application can benefit from new features

--- a/client/bower.json
+++ b/client/bower.json
@@ -19,8 +19,8 @@
     "angular-loading-bar": "0.8.x",
     "angular-bootstrap": "0.14.x",
     "angular-ui-router": "0.2.x",
-    "checklist-model": "0.6.x",
-    "oauth-ng": "0.4.2"
+    "checklist-model": "0.8.x",
+    "oauth-ng": "0.4.x"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8"
