--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
     <groupId>gov.samhsa.bhits.ppui</groupId>
     <artifactId>ppui</artifactId>
     <version>0.6.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>ppui</name>
     <description>Patient Portal UI</description>
