Add XML parser to convert XML to JSON. Add x2js in .jshintrc to ignore this global variable. Update the consent service to handle xml response from the backend. Add the try my policy url in the gruntfile.
#7692 - As a patient, I can view my health information, based on the latest transformed JSON from IExHub

--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -70,6 +70,7 @@
         "console": false,
         "spyOn": false,
         "jasmine": false,
-        "alert": false
+        "alert": false,
+        "X2JS": false
     }
 }
