--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 # application.yml template
 server:
   contextPath: /pp-ui
-  port: 8081
+  port: 8444
+  ssl:
+      key-store: C:/ssl_keystore.keystore
+      key-store-password: changeit
 logging:
   file: C:/java/MHC_LOGS/pp-ui/ppui.log
