--- a/client/package.json
+++ b/client/package.json
@@ -1,72 +1,74 @@
 {
-    "name": "patient-portal",
-    "version": "0.8.0",
-    "description": "",
-    "title": "Patient Portal",
-    "private": true,
-    "author": {
-        "name": ""
-    },
-    "homepage": "",
-    "repository": {
-        "type": "",
-        "url": ""
-    },
-    "bugs": {
-        "url": ""
-    },
-    "licenses": [
-        {
-            "type": "",
-            "url": ""
-        }
-    ],
-    "dependencies": {
-        "bower": "~1.5.3"
-    },
-    "devDependencies": {
-        "karma-chrome-launcher": "0.1.x",
-        "karma-script-launcher": "0.1.x",
-        "karma-firefox-launcher": "0.1.x",
-        "karma-html2js-preprocessor": "0.1.x",
-        "karma-ng-html2js-preprocessor": "0.1.x",
-        "karma-jasmine": "0.1.x",
-        "requirejs": "2.1.x",
-        "karma-requirejs": "0.2.x",
-        "karma-phantomjs-launcher": "0.1.x",
-        "karma": "0.10.x",
-        "karma-ie-launcher": "0.1.x",
-        "karma-junit-reporter": "0.2.x",
-        "karma-coverage": "0.1.x",
-        "grunt-contrib-compress": "0.6.x",
-        "grunt": "0.4.x",
-        "grunt-contrib-jshint": "0.8.x",
-        "grunt-contrib-uglify": "0.3.x",
-        "grunt-contrib-watch": "0.5.x",
-        "grunt-contrib-concat": "0.3.x",
-        "grunt-recess": "0.5.x",
-        "grunt-contrib-clean": "0.5.x",
-        "grunt-contrib-copy": "0.5.x",
-        "grunt-karma": "0.6.x",
-        "grunt-html2js": "0.2.x",
-        "grunt-autoprefixer": "0.6.x",
-        "grunt-contrib-htmlmin": "0.2.x",
-        "grunt-contrib-imagemin": "0.5.x",
-        "grunt-bower-task": "0.4.x",
-        "grunt-svgmin": "0.3.x",
-        "grunt-usemin": "2.0.x",
-        "jshint-stylish": "0.1.x",
-        "load-grunt-tasks": "0.3.x",
-        "time-grunt": "0.2.x",
-        "grunt-bump": "0.6.x",
-        "grunt-contrib-cssmin": "0.12.x",
-        "grunt-ng-constant": "1.1.x",
-        "grunt-war": "0.4.x",
-        "grunt-cli": "0.1.x",
-        "grunt-ng-annotate": "1.0.x",
-        "grunt-angular-file-loader": "1.1.x"
-    },
-    "engines": {
-        "node": ">= 0.8.4"
+  "name": "patient-portal",
+  "version": "0.8.0",
+  "description": "",
+  "title": "Patient Portal",
+  "private": true,
+  "author": {
+    "name": ""
+  },
+  "homepage": "",
+  "repository": {
+    "type": "",
+    "url": ""
+  },
+  "bugs": {
+    "url": ""
+  },
+  "licenses": [
+    {
+      "type": "",
+      "url": ""
     }
+  ],
+  "dependencies": {
+    "bower": "~1.7.7"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-angular-file-loader": "~1.1.5",
+    "grunt-autoprefixer": "~3.0.4",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-bump": "^0.7.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-compress": "~1.0.0",
+    "grunt-contrib-concat": "~1.0.0",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-htmlmin": "^0.6.0",
+    "grunt-contrib-imagemin": "~1.0.0",
+    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-uglify": "^0.11.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-html2js": "^0.3.5",
+    "grunt-karma": "^0.12.1",
+    "grunt-ng-annotate": "~1.0.1",
+    "grunt-ng-constant": "~2.0.1",
+    "grunt-recess": "~1.0.1",
+    "grunt-svgmin": "~3.1.2",
+    "grunt-usemin": "~3.1.1",
+    "grunt-war": "^0.4.8",
+    "jasmine-core": "~2.4.1",
+    "jshint-stylish": "~2.1.0",
+    "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.4",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-html2js-preprocessor": "^0.1.0",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.7",
+    "karma-junit-reporter": "^0.3.8",
+    "karma-ng-html2js-preprocessor": "^0.2.1",
+    "karma-phantomjs-launcher": "~1.0.0",
+    "karma-requirejs": "^0.2.5",
+    "karma-script-launcher": "^0.2.0",
+    "load-grunt-tasks": "~3.4.1",
+    "phantomjs-prebuilt": "~2.1.4",
+    "requirejs": "~2.1.22",
+    "time-grunt": "~1.3.0"
+  },
+  "engines": {
+    "node": ">= 0.8.4"
+  }
 }
