--- a/client/bower.json
+++ b/client/bower.json
@@ -1,6 +1,8 @@
 {
-  "name": "my-health-compass",
-  "description": "",
+  "name": "testbed",
+  "version": "0.8.0",
+  "description": "Proof of concept",
+  "license": "Copyright @FEi Systems",
   "private": true,
   "ignore": [
     "**/.*",
@@ -19,7 +21,7 @@
     "angular-ui-router": "0.2.x",
     "checklist-model": "0.9.x",
     "oauth-ng": "0.4.x",
-    "x2js": "1.2.x"
+    "x2js":"1.2.x"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
