Update metadata in bower.json & package.json without changing name

--- a/client/package.json
+++ b/client/package.json
@@ -2,25 +2,8 @@
   "name": "patient-portal",
   "version": "0.8.0",
   "description": "",
-  "title": "Patient Portal",
+  "title": "My Health Compass",
   "private": true,
-  "author": {
-    "name": ""
-  },
-  "homepage": "",
-  "repository": {
-    "type": "",
-    "url": ""
-  },
-  "bugs": {
-    "url": ""
-  },
-  "licenses": [
-    {
-      "type": "",
-      "url": ""
-    }
-  ],
   "devDependencies": {
 	"bower": "~1.7.7",
     "grunt": "^0.4.5",
