--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,25 @@
   "name": "patient-portal",
   "version": "0.8.0",
   "description": "",
-  "title": "My Health Compass",
+  "title": "Patient Portal",
   "private": true,
+  "author": {
+    "name": ""
+  },
+  "homepage": "",
+  "repository": {
+    "type": "",
+    "url": ""
+  },
+  "bugs": {
+    "url": ""
+  },
+  "licenses": [
+    {
+      "type": "",
+      "url": ""
+    }
+  ],
   "devDependencies": {
 	"bower": "~1.7.7",
     "grunt": "^0.4.5",
