--- a/client/package.json
+++ b/client/package.json
@@ -30,18 +30,18 @@
     "grunt-bump": "^0.7.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "~1.0.0",
-    "grunt-contrib-compress": "~1.0.0",
+    "grunt-contrib-compress": "~1.1.1",
     "grunt-contrib-concat": "~1.0.0",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-htmlmin": "^0.6.0",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-cssmin": "~1.0.0",
+    "grunt-contrib-htmlmin": "~1.0.0",
     "grunt-contrib-imagemin": "~1.0.0",
     "grunt-contrib-jshint": "~1.0.0",
-    "grunt-contrib-uglify": "^0.11.1",
+    "grunt-contrib-uglify": "~1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html2js": "^0.3.5",
     "grunt-karma": "^0.12.1",
-    "grunt-ng-annotate": "~1.0.1",
+    "grunt-ng-annotate": "~2.0.1",
     "grunt-ng-constant": "~2.0.1",
     "grunt-recess": "~1.0.1",
     "grunt-svgmin": "~3.1.2",
@@ -49,20 +49,20 @@
     "grunt-war": "^0.4.8",
     "jasmine-core": "~2.4.1",
     "jshint-stylish": "~2.1.0",
-    "karma": "^0.13.21",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
-    "karma-coverage": "^0.5.4",
+    "karma-coverage": "^0.5.5",
     "karma-firefox-launcher": "^0.1.7",
     "karma-html2js-preprocessor": "^0.1.0",
     "karma-ie-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.7",
-    "karma-junit-reporter": "^0.3.8",
+    "karma-junit-reporter": "^0.4.0",
     "karma-ng-html2js-preprocessor": "^0.2.1",
     "karma-phantomjs-launcher": "~1.0.0",
     "karma-requirejs": "^0.2.5",
     "karma-script-launcher": "^0.2.0",
     "load-grunt-tasks": "~3.4.1",
-    "phantomjs-prebuilt": "~2.1.4",
+    "phantomjs-prebuilt": "~2.1.5",
     "requirejs": "~2.1.22",
     "time-grunt": "~1.3.0"
   },
