--- a/client/bower.json
+++ b/client/bower.json
@@ -16,6 +16,7 @@
     "angular-resource": "1.5.0",
     "angular-sanitize": "1.5.0",
     "angular-aria": "1.5.0",
+    "angular-messages": "1.5.0",
     "angular-loading-bar": "0.8.x",
     "angular-bootstrap": "1.2.x",
     "angular-ui-router": "0.2.x",
