--- a/server/pom.xml
+++ b/server/pom.xml
@@ -32,6 +32,7 @@
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
         <maven-war-plugin.version>2.6</maven-war-plugin.version>
 		<frontend-maven-plugin.version>0.0.26</frontend-maven-plugin.version>
+        <docker.maven.version>0.4.1</docker.maven.version>
     </properties>
 
     <ciManagement>
@@ -123,6 +124,22 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>${docker.maven.version}</version>
+                <configuration>
+                    <imageName>${project.artifactId}</imageName>
+                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
