--- a/server/pom.xml
+++ b/server/pom.xml
@@ -99,6 +99,12 @@
                 <grunt.build.arguments>build-qa</grunt.build.arguments>
             </properties>
         </profile>
+        <profile>
+            <id>docker</id>
+            <properties>
+                <grunt.build.arguments>build-docker</grunt.build.arguments>
+            </properties>
+        </profile>
     </profiles>
 
     <dependencies>
