--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 0
+spring.profiles.active: eureka-ssl
 logging:
   file: /java/MHC_LOGS/pp-ui/ppui.log
 info:
@@ -14,7 +15,7 @@ eureka:
     healthcheck:
       enabled: true
     service-url:
-      defaultZone: https://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 ---
 spring.profiles: ssl
 server:
@@ -34,3 +35,9 @@ spring:
     include: ssl
 server:
   context-path: /pp-ui
+---
+spring.profiles: eureka-ssl
+eureka:
+  client:
+    service-url:
+      defaultZone: https://localhost:8761/eureka/
