--- a/server/pom.xml
+++ b/server/pom.xml
@@ -32,7 +32,7 @@
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
         <maven-war-plugin.version>2.6</maven-war-plugin.version>
 		<frontend-maven-plugin.version>0.0.26</frontend-maven-plugin.version>
-        <docker.maven.version>0.4.1</docker.maven.version>
+        <docker.maven.version>0.4.3</docker.maven.version>
     </properties>
 
     <ciManagement>
@@ -138,6 +138,9 @@
                 <configuration>
                     <imageName>${project.artifactId}</imageName>
                     <dockerDirectory>src/main/docker</dockerDirectory>
+                    <buildArgs>
+                        <finalName>${project.build.finalName}.jar</finalName>
+                    </buildArgs>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
