--- a/server/src/main/docker/Dockerfile
+++ b/server/src/main/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM java:8
 VOLUME /java
-ADD pp-ui-0.8.0-SNAPSHOT.jar /pp-ui.jar
+ARG finalName
+ADD $finalName /pp-ui.jar
 ENTRYPOINT ["java","-jar","/pp-ui.jar"]
