Add docker spring profiles and active when deployment.
# 8418 -  Set up development environment (MHC Apps) using one command and development workflow.

--- a/server/src/main/docker/Dockerfile
+++ b/server/src/main/docker/Dockerfile
@@ -2,4 +2,4 @@ FROM java:8
 VOLUME /java
 ARG finalName
 ADD $finalName /pp-ui.jar
-ENTRYPOINT ["java","-jar","/pp-ui.jar"]
+ENTRYPOINT ["java","-jar","/pp-ui.jar","--spring.profiles.active=docker"]
