--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
   contextPath: /pp-ui
   port: 8444
   ssl:
-    key-store: /java/keystore/ssl_keystore.keystore
+    key-store: /ssl_keystore.keystore
     key-store-password: changeit
 logging:
   file: /java/MHC_LOGS/pp-ui/ppui.log
