--- a/server/src/main/docker/Dockerfile
+++ b/server/src/main/docker/Dockerfile
@@ -2,4 +2,4 @@ FROM java:8
 VOLUME /java
 ARG finalName
 ADD $finalName /pp-ui.jar
-ENTRYPOINT ["java","-jar","/pp-ui.jar","--spring.profiles.active=docker"]
+ENTRYPOINT ["java","-Djavax.net.ssl.trustStore=/java/keystore/mhc.keystore","-Djavax.net.ssl.trustStorePassword=changeit","-jar","/pp-ui.jar","--spring.profiles.active=docker"]
