--- a/server/pom.xml
+++ b/server/pom.xml
@@ -28,11 +28,11 @@
         <skip.grunt.build>false</skip.grunt.build>
         <java.version>1.8</java.version>
         <spring.cloud.version>Brixton.M5</spring.cloud.version>
-        <node.version>0.12.3</node.version>
-        <npm.version>1.4.9</npm.version>
+        <node.version>4.4.7</node.version>
+        <npm.version>2.15.8</npm.version>
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
         <maven-war-plugin.version>2.6</maven-war-plugin.version>
-		<frontend-maven-plugin.version>0.0.26</frontend-maven-plugin.version>
+		<frontend-maven-plugin.version>1.0</frontend-maven-plugin.version>
         <docker.maven.version>0.4.3</docker.maven.version>
     </properties>
 
@@ -192,7 +192,7 @@
                             <!-- You can also specify separate download roots for npm and node
                                 as they are now stored in separate repos -->
                             <nodeDownloadRoot>http://nodejs.org/dist/</nodeDownloadRoot>
-                            <npmDownloadRoot>http://nodejs.org/dist/npm/</npmDownloadRoot>
+                            <npmDownloadRoot>https://registry.npmjs.org/npm/-/</npmDownloadRoot>
                         </configuration>
                     </execution>
 
