change brand from mhc to c2s
#10467 - As a developer, I will complete rebranding changes in code

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -46,6 +46,6 @@ spring.profiles: docker
 eureka:
   client:
     service-url:
-      defaultZone: https://discovery-server.mhc.com:8761/eureka/
+      defaultZone: https://discovery-server.c2s.com:8761/eureka/
   instance:
     prefer-ip-address: true
