--- a/server/pom.xml
+++ b/server/pom.xml
@@ -24,7 +24,7 @@
     <!-- Package & Run: mvn spring-boot:run -PskipGrunt -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/pp-ui (remove backslashes) -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <start-class>gov.samhsa.bhits.ppui.PPUIApplication</start-class>
+        <start-class>gov.samhsa.c2s.ppui.PPUIApplication</start-class>
         <skip.grunt.build>false</skip.grunt.build>
         <java.version>1.8</java.version>
         <spring.cloud.version>Brixton.M5</spring.cloud.version>
