Update the metadata in both the package.json and bower.json
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "patient-portal",
+  "name": "Consent2Share",
   "version": "0.17.0",
   "description": "",
   "title": "Patient Portal",
