--- a/client/bower.json
+++ b/client/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "testbed",
+  "name": "Consent2Share",
   "version": "0.17.0",
   "description": "Proof of concept",
   "license": "Copyright @FEi Systems",
