--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,18 +10,41 @@
 
     <name>ppui</name>
     <description>Patient Portal UI</description>
+    <url>${scm.url}</url>
+
+    <developers>
+        <developer>
+            <id>BHITS Team</id>
+            <name>BHITS Team</name>
+            <organization>FEi Systems</organization>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>See license in LICENSE.md</name>
+            <url>${scm.url}/blob/master/LICENSE.md</url>
+        </license>
+    </licenses>
+
+    <ciManagement>
+        <system>Jenkins</system>
+        <url>http://BhitsBuild03/</url>
+    </ciManagement>
+
+    <scm>
+        <url>https://github.com/BHITS/patient-portal-ui</url>
+        <connection>scm:git:${scm.url}.git</connection>
+        <developerConnection>scm:git:${scm.url}.git</developerConnection>
+    </scm>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.3.3.RELEASE</version>
-        <relativePath/>
-        <!-- lookup parent from repository -->
+        <relativePath/><!-- lookup parent from repository -->
     </parent>
 
-    <!-- Full Build: mvn clean install -->
-    <!-- Full Build & Run: mvn spring-boot:run -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/pp-ui (remove backslashes) -->
-    <!-- Package & Run: mvn spring-boot:run -PskipGrunt -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/pp-ui (remove backslashes) -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>gov.samhsa.c2s.ppui.PPUIApplication</start-class>
@@ -35,32 +58,6 @@
 		<frontend-maven-plugin.version>1.0</frontend-maven-plugin.version>
         <docker.maven.version>0.4.3</docker.maven.version>
     </properties>
-
-    <ciManagement>
-        <system>Jenkins</system>
-        <url>http://BhitsBuild03/</url>
-    </ciManagement>
-
-    <!-- Since buildnumber-maven-plugin uses git command, git command must in
-        path. i.e. need set git in the path Environment variable -->
-    <scm>
-        <url>https://github.com/FEISystems/patient-portal-ui</url>
-        <connection>scm:git:https://github.com/FEISystems/patient-portal-ui.git</connection>
-        <developerConnection>scm:git:https://github.com/FEISystems/patient-portal-ui.git</developerConnection>
-    </scm>
-
-    <developers>
-        <developer>
-            <id>Bhits.Java</id>
-            <name>Bhits Java</name>
-            <email>Bhits.Java@feisystems.com</email>
-            <organization>FEi Systems</organization>
-            <roles>
-                <role>developer</role>
-            </roles>
-            <timezone>-5</timezone>
-        </developer>
-    </developers>
 
     <distributionManagement>
         <repository>
