Add comments in application yml file
#10926 - As a developer, I will have prepared admin-portal-ui,  patient-portal-ui code to make it more deployable by community member (HIE)

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -8,18 +8,20 @@ info:
 eureka:
   instance:
     instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
-#    hostname: localhost
     secure-port-enabled: false
     non-secure-port-enabled: true
   client:
     healthcheck:
       enabled: true
     service-url:
+      # endpoint for discovery-server, pass '--eureka.client.protocol=https' if discovery-server is running on https
       defaultZone: http://localhost:8761/eureka/
 ---
+# enables ssl in this service when activated
 spring.profiles: ssl
 server:
   port: 8444
+  # configure keystore and keystore password for ssl per environment
   ssl:
     key-store: /ssl_keystore.keystore
     key-store-password: changeit
@@ -29,6 +31,7 @@ eureka:
     secure-port-enabled: true
     non-secure-port-enabled: false
 ---
+# enables ssl and adds /phr context path when activated
 spring.profiles: standalone-ssl
 spring:
   profiles:
@@ -42,6 +45,7 @@ eureka:
     service-url:
       defaultZone: https://localhost:8761/eureka/
 ---
+# updates configuration for docker environment
 spring.profiles: docker
 eureka:
   client:
