Change comments in application yml file
#10927 - As a community member (HIE), I will be able to utilize consent2share documentation related to Frontend Code and Git Repository, in order to facilitate development of C2S (SPRINT 00)

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -31,7 +31,7 @@ eureka:
     secure-port-enabled: true
     non-secure-port-enabled: false
 ---
-# enables ssl and adds /phr context path when activated
+# enables ssl and adds /pp-ui context path when activated
 spring.profiles: standalone-ssl
 spring:
   profiles:
