Refactor dockerfile to use java-jar-runner.
# 10924 - As a community member (HIE), I  will be able to utilize consent2share documentation related to Docker Images and infrastructure code, in order to facilitate implementation of a C2S instance

--- a/server/src/main/docker/Dockerfile
+++ b/server/src/main/docker/Dockerfile
@@ -1,5 +1,6 @@
-FROM java:8
+FROM bhits/java-jar-runner:8u102-jre
 VOLUME /java
 ARG finalName
-ADD $finalName /pp-ui.jar
-ENTRYPOINT ["java","-Djavax.net.ssl.trustStore=/java/keystore/c2s.keystore","-Djavax.net.ssl.trustStorePassword=changeit","-jar","/pp-ui.jar","--spring.profiles.active=docker"]
+ENV JAR_FILE $finalName
+COPY $finalName /
+ENV DEFAULT_PROGRAM_ARGS --spring.profiles.active=docker
