--- a/server/pom.xml
+++ b/server/pom.xml
@@ -41,7 +41,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.3.RELEASE</version>
+        <version>1.4.1.RELEASE</version>
         <relativePath/><!-- lookup parent from repository -->
     </parent>
 
@@ -53,7 +53,7 @@
         <start-class>gov.samhsa.c2s.ppui.PPUIApplication</start-class>
         <skip.grunt.build>false</skip.grunt.build>
         <java.version>1.8</java.version>
-        <spring.cloud.version>Brixton.M5</spring.cloud.version>
+        <spring.cloud.version>Camden.SR2</spring.cloud.version>
         <node.version>4.4.7</node.version>
         <npm.version>2.15.8</npm.version>
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
@@ -144,6 +144,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
