--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Consent2Share",
+  "name": "pp-ui",
   "version": "0.21.0",
   "description": "",
   "title": "Patient Portal",
@@ -22,7 +22,7 @@
     }
   ],
   "devDependencies": {
-	"bower": "~1.7.7",
+    "bower": "~1.7.7",
     "grunt": "^1.0.1",
     "grunt-angular-file-loader": "~1.2.0",
     "grunt-autoprefixer": "~3.0.4",
