--- a/server/pom.xml
+++ b/server/pom.xml
@@ -46,8 +46,8 @@
     </parent>
 
     <!-- Full Build: mvn clean install -->
-    <!-- Full Build & Run: mvn spring-boot:run -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/admin-ui (remove backslashes) -->
-    <!-- Package & Run: mvn spring-boot:run -PskipGrunt -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/admin-ui (remove backslashes) -->
+    <!-- Full Build & Run: mvn spring-boot:run -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/pp-ui (remove backslashes) -->
+    <!-- Package & Run: mvn spring-boot:run -PskipGrunt -Drun.arguments=-\-server.port=8081,-\-server.contextPath=/pp-ui (remove backslashes) -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>gov.samhsa.c2s.ppui.PPUIApplication</start-class>
@@ -58,7 +58,7 @@
         <npm.version>2.15.8</npm.version>
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
         <maven-war-plugin.version>2.6</maven-war-plugin.version>
-		<frontend-maven-plugin.version>1.0</frontend-maven-plugin.version>
+        <frontend-maven-plugin.version>1.0</frontend-maven-plugin.version>
         <docker.maven.version>0.4.3</docker.maven.version>
         <lombok.version>1.16.10</lombok.version>
     </properties>
@@ -94,27 +94,6 @@
             </activation>
             <properties>
                 <skip.grunt.build>true</skip.grunt.build>
-            </properties>
-        </profile>
-        <profile>
-            <id>dev</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <grunt.build.arguments>build-dev</grunt.build.arguments>
-            </properties>
-        </profile>
-        <profile>
-            <id>qa</id>
-            <properties>
-                <grunt.build.arguments>build-qa</grunt.build.arguments>
-            </properties>
-        </profile>
-        <profile>
-            <id>docker</id>
-            <properties>
-                <grunt.build.arguments>build-docker</grunt.build.arguments>
             </properties>
         </profile>
     </profiles>
@@ -186,7 +165,7 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-				<version>${frontend-maven-plugin.version}</version>
+                <version>${frontend-maven-plugin.version}</version>
 
                 <!-- optional -->
                 <configuration>
@@ -245,7 +224,6 @@
                         <configuration>
                             <!-- optional: if not specified, it will run Grunt's default task
                                 (and you can remove this whole <configuration> section.) -->
-                            <arguments>${grunt.build.arguments}</arguments>
                             <!-- srcdir (optional, for M2Eclipse integration) - a directory to check for changed files before executing in an incremental build -->
                             <!-- The changed file checking only occurs during an incremental build when using M2Eclipse. In any other environment those options are ignored and builds are always run. -->
                             <srcdir>${basedir}/../client</srcdir>
@@ -287,5 +265,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
