Change to get configuration for branding from server side in home controller
#11661 - As a developer, I will have upgrade UI projects to get configuration at run time

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -20,7 +20,7 @@ c2s:
   pp-ui:
     branding:
       name: Consent2Share
-      initial: C2S
+      initials: C2S
     oauth2:
       client:
         client-id: patient-portal-ui
