Add '.tscache'  and  'typings' directories and map files to .gitignore
#12133 - As a developer, I will have implemented Angular 2 with Typescript in the PP–UI

--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,17 @@ bower_components
 # Optional REPL history
 .node_repl_history
 
+# Typescript #
+##################################
+
+# Typing directory
+typings
+
+# Typescript
+.tscache
+client/app_ts/**/*.js
+client/app_ts/**/*.js.map
+
 
 # SASS #
 ##################################
