--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,22 @@
     "angular-ui-router": "0.2.x",
     "checklist-model": "0.9.x",
     "ngstorage": "0.3.x",
-    "angular-jwt": "0.0.x"
+    "angular-jwt": "0.0.x",
+    "@angular/common": "2.2.0-rc.0",
+    "@angular/compiler": "2.2.0-rc.0",
+    "@angular/core": "2.2.0-rc.0",
+    "@angular/forms": "2.2.0-rc.0",
+    "@angular/http": "2.2.0-rc.0",
+    "@angular/platform-browser": "2.2.0-rc.0",
+    "@angular/platform-browser-dynamic": "2.2.0-rc.0",
+    "@angular/router": "3.2.0-rc.0",
+    "@angular/upgrade": "2.2.0-rc.0",
+    "core-js": "2.4.x",
+    "es6-shim": "0.35.x",
+    "reflect-metadata": "0.1.x",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.x",
+    "zone.js": "0.6.x"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
@@ -59,6 +74,12 @@
     "grunt-svgmin": "~3.3.0",
     "grunt-usemin": "~3.1.1",
     "grunt-war": "^0.5.1",
+    "ts-helpers": "1.1.1",
+    "tslint": "3.7.0-dev.2",
+    "typescript": "2.1.4",
+    "typings": "0.8.1",
+    "grunt-ts": "6.0.0-beta.3",
+    "grunt-typings": "0.1.x",
     "jasmine-core": "~2.4.1",
     "jshint-stylish": "~2.2.0",
     "karma": "^1.1.2",
