--- a/client/bower.json
+++ b/client/bower.json
@@ -29,7 +29,8 @@
     "angular-i18n": "1.4.0",
     "angular-translate-storage-local": "2.10.0",
     "angular-translate-storage-cookie": "2.10.0",
-    "angular-dynamic-locale": ""
+    "angular-dynamic-locale": "",
+    "bootstrap-filestyle": "1.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
