Update Angu[lar 2 version  #12552 - As a developer, I will have Implement frontend for multi-provider adding feature

--- a/client/package.json
+++ b/client/package.json
@@ -33,21 +33,21 @@
     "checklist-model": "0.9.x",
     "ngstorage": "0.3.x",
     "angular-jwt": "0.0.x",
-    "@angular/common": "2.2.0-rc.0",
-    "@angular/compiler": "2.2.0-rc.0",
-    "@angular/core": "2.2.0-rc.0",
-    "@angular/forms": "2.2.0-rc.0",
-    "@angular/http": "2.2.0-rc.0",
-    "@angular/platform-browser": "2.2.0-rc.0",
-    "@angular/platform-browser-dynamic": "2.2.0-rc.0",
-    "@angular/router": "3.2.0-rc.0",
-    "@angular/upgrade": "2.2.0-rc.0",
+    "@angular/common": "^2.4.4",
+    "@angular/compiler": "^2.4.4",
+    "@angular/core": "^2.4.4",
+    "@angular/forms": "^2.4.4",
+    "@angular/http": "^2.4.4",
+    "@angular/platform-browser": "^2.4.4",
+    "@angular/platform-browser-dynamic": "^2.4.4",
+    "@angular/router": "^3.4.4",
+    "@angular/upgrade": "^2.4.4",
     "core-js": "2.4.x",
     "es6-shim": "0.35.x",
     "reflect-metadata": "0.1.x",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.1",
     "systemjs": "0.19.x",
-    "zone.js": "0.6.x"
+    "zone.js": "0.7.x"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
