--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,14 @@
     "reflect-metadata": "0.1.x",
     "rxjs": "^5.0.1",
     "systemjs": "0.19.x",
-    "zone.js": "0.7.x"
+    "zone.js": "0.7.x",
+    "x2js":"3.1.0",
+    "angular-translate": "2.10.0",
+    "angular-translate-loader-static-files": "2.10.0",
+    "angular-i18n": "1.4.0",
+    "angular-translate-storage-local": "2.10.0",
+    "angular-translate-storage-cookie": "2.10.0",
+    "angular-dynamic-locale": ""
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
