--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>gov.samhsa.c2s</groupId>
     <artifactId>pp-ui</artifactId>
-    <version>0.26.0-SNAPSHOT</version>
+    <version>0.26.0</version>
     <packaging>jar</packaging>
 
     <name>ppui</name>
